static/css/main.css
/*@import "css_reset.css";*/
.bg-dark{
    background-color: rgb(52,58,64)  !important;
}

.bg-antracite {
    background-color: rgb(65,72,80)  !important;
}

.submit-row-form-button{
    border-radius: 0 0.25rem 0.25rem 0;
}

.board-title {
    font-size: 1.25rem;
}

.column-title {
    padding-left: 1rem;
}

.board-container {
    border-style: solid;
    border-width: 3px;
    border-radius: 8px;
}

.board-column-container {
    align-items: flex-start;
    height: 80vh
}

.status-column {
    width: 20rem;
    min-width: 20rem;
    max-height: 77vh;
}

.add-column-btn {
    min-width: 20rem;
    width: 20rem;
}

.add-card-btn{
    border-color: rgb(65,72,80) !important;
}

.btn-size-medium {
    font-size: 1rem;
}

.btn-size-small {
    font-size: 0.9rem;
}

.btn-antracite {
    color: rgb(248,249,250);
    background-color: rgb(65,72,80);
    border-color: rgb(65,72,80);
}

.btn-antracite:hover {
  color: rgb(248,249,250);
  background-color: rgb(57,64,70);
  border-color: rgb(57,64,70);
}

#new-board-button-container{
    width: 60%;
}

#add-new-board-button{
    border-radius: 8px;
}

/*Bootstrap overrides*/
.dropdown-item:hover{
    background-color: rgb(224,168,0);
}

:focus:not(:focus-visible) {
  outline: 0;
  box-shadow: none;
}

.caret-off::before {
    display: none;
}
.caret-off::after {
    display: none;
}

